[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/NavesEnemigas/interceptor.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/NavesEnemigas/EnemigoInterceptor.gd" type="Script" id=3]
[ext_resource path="res://Juego/Naves/NavesEnemigas/spawn_interceptor.png" type="Texture" id=4]
[ext_resource path="res://Juego/Proyectiles/ProyectilEnemigo.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.0
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]
radius = 64.2884

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSpawn:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpritePlayer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSpawn:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 3.8, 3.8 ), Vector2( 2.5, 2.5 ), Vector2( 4, 4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteSpawn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.509804 ), Color( 1, 1, 1, 0.223529 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpritePlayer:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.410654, 0.410654 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpritePlayer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 218.586

[sub_resource type="CircleShape2D" id=3]
radius = 391.032

[node name="EnemigoInterceptor" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 13
physics_material_override = SubResource( 7 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 3 )

[node name="SpriteSpawn" type="Sprite" parent="." index="0"]
texture = ExtResource( 4 )

[node name="SpritePlayer" parent="." index="1"]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="CollisionPlayer" parent="." index="2"]
position = Vector2( 9, 2 )
shape = SubResource( 2 )

[node name="Canion" parent="." index="3"]
proyectil = ExtResource( 5 )
cadencia_disparo = 1.2
velocidad_proyectil = 1200

[node name="PunteroIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, -27 )

[node name="PunteroDerecho" parent="Canion" index="1"]
position = Vector2( 0, 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
autoplay = "spawn"
anims/default = SubResource( 5 )
anims/spawn = SubResource( 6 )

[node name="AreaDisparo" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDisparo" index="0"]
shape = SubResource( 1 )

[node name="AreaDeteccion" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeteccion" index="0"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaDisparo" to="." method="_on_AreaDisparo_body_entered"]
[connection signal="body_exited" from="AreaDisparo" to="." method="_on_AreaDisparo_body_exited"]
[connection signal="body_entered" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_entered"]
[connection signal="body_exited" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_exited"]

[editable path="Canion"]
